# rust-blog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  migrate.sh  tailwind.config.js
migrations/: 20231213191035_users.up.sql  20231214191216_contact.down.sql  20231214191216_contact.up.sql  20231215000927_blog.down.sql  20231215000927_blog.up.sql  20231215002512_cotegories.down.sql  20231215002512_cotegories.up.sql  20231215002840_tags-and-tag-blog-link.down.sql  20231215002840_tags-and-tag-blog-link.up.sql  20231215003025_comments.up.sql  20231215003237_medias.down.sql  20231215003237_medias.up.sql  20231215120809_rename-messages-to-contact-messages.down.sql  20231215120809_rename-messages-to-contact-messages.up.sql
src/: main.rs
src/controllers/: about.rs  about_controller.rs  admin_controller.rs  blogs.rs  blogs_controller.rs  contact.rs  contact_controller.rs  mod.rs  not_found_controller.rs
src/models/: blog.rs  contact_message.rs  mod.rs  user.rs
src/services/: contact_service.rs
src/static/css/: output.css
src/views/: 404.html  mod.rs
src/views/about/: index.html
src/views/admin/: index.html
src/views/blogs/: index.html  show.html
src/views/contact/: index.html
src/views/layout/: admin_base.html  base.html
